--- a/flutter_quill_extensions/pubspec.yaml
+++ b/flutter_quill_extensions/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_quill: ^7.1.17
+  flutter_quill:
+    path: ../
 
   image_picker: ^0.8.5+3
   photo_view: ^0.14.0
