--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.4
   path_provider: ^2.0.9
   filesystem_picker: ^3.1.0
-  file_picker: ^5.2.2
+  file_picker: 5.2.2
   flutter_quill:
     path: ../
   flutter_quill_extensions:
