--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,16 +20,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  collection: 1.17.1
-  flutter_colorpicker: ^1.0.3 
-  flutter_keyboard_visibility: ^5.4.1 
+  collection: ^1.17.0
+  flutter_colorpicker: ^1.0.3
+  flutter_keyboard_visibility: ^5.4.0
   quiver: ^3.2.1
-  url_launcher: ^6.1.11
+  url_launcher: ^6.1.9
   pedantic: ^1.11.1
-  characters: ^1.3.0
+  characters: ^1.2.1
   diff_match_patch: ^0.4.1
-  i18n_extension: ^9.0.2
-  device_info_plus: 8.2.2
+  i18n_extension: ">=8.0.0 <10.0.0"
+  device_info_plus: ^9.0.0
   platform: ^3.1.0
   pasteboard: ^0.2.0
 
