--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  collection: 1.17.1
+  collection: ^1.17.2
   flutter_colorpicker: ^1.0.3 
   flutter_keyboard_visibility: ^5.4.1 
   quiver: ^3.2.1
