--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
 dependency_overrides:
   flutter_quill:
     path: ../
+  flutter_math_fork: 0.7.2
 
 dev_dependencies:
   flutter_test:
