--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,16 +14,17 @@ dependencies:
     sdk: flutter
   collection: ^1.17.2
   flutter_colorpicker: ^1.0.3 
-  flutter_keyboard_visibility: ^5.4.1 
+  flutter_keyboard_visibility: ^6.0.0 
   quiver: ^3.2.1
   url_launcher: ^6.1.11
   pedantic: ^1.11.1
   characters: ^1.3.0
   diff_match_patch: ^0.4.1
-  i18n_extension: ^9.0.2
-  device_info_plus: 8.2.2
+  i18n_extension: ^10.0.1
+  device_info_plus: ^9.1.2
   platform: ^3.1.0
   pasteboard: ^0.2.0
+  file_picker: 7.0.2
 
   # Dependencies for testing utilities
   flutter_test:
